basic blog nodes built and listed

--- a/src/pages/blog/2018-10-12-hi-title.md
+++ b/src/pages/blog/2018-10-12-hi-title.md
@@ -2,7 +2,10 @@
 layout: blog
 title: hi title
 date: 2018-10-12T08:26:27.035Z
-thumbnail: /img/apple.jpg
-rating: '3'
+thumbnail: /images/apple.jpg
+thumbnailAlt: 'an apple pie'
+calories: '3000'
+ingredients: ['apple', 'flour', 'sugar', 'butter']
+path: /blog/my-first-post
 ---
 Omg first post!
