--- a/src/pages/blog/2018-10-13-cms-made.md
+++ b/src/pages/blog/2018-10-13-cms-made.md
@@ -18,4 +18,4 @@ align: left
 * meat
 * pastry
 
-`<iframe width="560" height="315" src="https://www.youtube.com/embed/FAlvWdUWqbs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>`
+`youtube: https://www.youtube.com/watch?v=2Xc9gXyf2G4` 
