Update Sale “2018-10-17-sale-1”

--- a/src/pages/sale/2018-10-17-sale-1.md
+++ b/src/pages/sale/2018-10-17-sale-1.md
@@ -4,6 +4,6 @@ layout: sale
 startdate: 2018-10-16T23:40:43.948Z
 enddate: 2018-10-21T23:40:43.949Z
 ---
-<p class='specialParagraph' markdown='1'>
+<p class='md-center' markdown='1'>
 Apple pie + soda 20% off!
 </p>
